--- a/Linna.xcodeproj/xcshareddata/xcschemes/Linna.xcscheme
+++ b/Linna.xcodeproj/xcshareddata/xcschemes/Linna.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "6B3743422199AAE1001493A1"
+            BuildableName = "Linna.framework"
+            BlueprintName = "Linna"
+            ReferencedContainer = "container:Linna.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
