Update SonarQube settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,5 +7,9 @@ sonar.host.url=https://sonarcloud.io
 sonar.language=swift
 sonar.sources=Sources
 
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
+
 sonar.inclusions=Sources/**
 sonar.coverageReportPaths=sonarqube-generic-coverage.xml
